Maintenance, New Font, New Prompt (testing)

--- a/templates/results.html
+++ b/templates/results.html
@@ -364,7 +364,11 @@
             <a href="/"><i class="fas fa-upload"></i> Upload New File</a>
         </div>
     </nav> -->
-
+    
+    <!-- Maintenance Banner -->
+    <div style="margin: 5px 40px 0  40px; border: 1px solid lab(48.4493% 77.4328 61.5452); border-radius: .5rem; height: fit-content; background-color: lab(96.5005% 4.18508 1.52328);">
+        <p style="margin: 0; padding: 16px 0px; position: relative; text-align: center; color: lab(28.5139% 44.5539 29.0463); font-size: 14px;">ⓘ Site is under maintenance. Unable to generate study guides, as of now*</p>
+    </div>
     <nav class="navbar" style="border: none; position: relative; padding: 25px 0px 0px 0px">
         <a class="nav-link" href="/" style="margin-left: 40px;">
             <span class="material-symbols-outlined nav-icon">arrow_back_ios</span>
